<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sl_background_border"
    tools:context=".SearchUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/step2"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/img_title_activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/step2"
            app:layout_constraintEnd_toEndOf="@id/step2"
            app:layout_constraintStart_toStartOf="@id/step2"
            app:layout_constraintTop_toTopOf="@id/step2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_logout_orange_24dp"
        android:drawableRight="@drawable/ic_logout_orange_24dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_green_border"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step2">

        <LinearLayout
            android:id="@+id/transaction_data"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dati">

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trans_type_desc2"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/prestitoLL"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/sl_orange_border_bg"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_prestito_white"
                    android:contentDescription="@string/load" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/load"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/prestito"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/sl_blue_bg"
                    android:src="@drawable/ic_done_white_48dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:visibility="invisible"
                    android:contentDescription="@string/confirmation" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/restituzioneLL"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/sl_green_border_bg"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_restituzione_white"
                    android:contentDescription="@string/restitution" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/restitution"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/restituzione"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/sl_blue_bg"
                    android:src="@drawable/ic_done_white_48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:visibility="invisible"
                    android:contentDescription="@string/confirmation" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/transaction_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_blue_bg"
        android:text="@string/trans_type_desc"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step2" />

    <Button
        android:id="@+id/back_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_red_border_bg"
        android:drawableStart="@drawable/ic_arrow_left_white_24dp"
        android:drawableLeft="@drawable/ic_arrow_left_white_24dp"
        android:padding="15dp"
        android:text="@string/back_activity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/next_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_green_border_bg"
        android:drawableEnd="@drawable/ic_arrow_right_white_24dp"
        android:drawableRight="@drawable/ic_arrow_right_white_24dp"
        android:padding="15dp"
        android:text="@string/next_activity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>