<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sl_background_border"
    tools:context=".SearchUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/step3"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/img_title_activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/step3"
            app:layout_constraintEnd_toEndOf="@id/step3"
            app:layout_constraintStart_toStartOf="@id/step3"
            app:layout_constraintTop_toTopOf="@id/step3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_logout_orange_24dp"
        android:drawableRight="@drawable/ic_logout_orange_24dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barcodeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_green_border"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step3">

        <LinearLayout
            android:id="@+id/barcode_data"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barcodeData">

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/sl_orange_border_bg_v2"
                android:src="@android:drawable/ic_menu_camera"
                android:contentDescription="@string/camera_scan" />

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/fluo_green"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/barcode"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text=""
                android:maxLength="13"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/sl_orange_border_bg_v2"
                android:src="@android:drawable/ic_menu_search"
                android:contentDescription="@string/search" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/barcode_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_border"
        android:text="@string/barcode"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/book_list_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_green_border"
        android:layout_marginTop="45dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeData">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/book_list_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_border"
        android:text="@string/book_list"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeData" />

    <Button
        android:id="@+id/back_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_red_border_bg"
        android:drawableStart="@drawable/ic_arrow_left_white_24dp"
        android:drawableLeft="@drawable/ic_arrow_left_white_24dp"
        android:padding="15dp"
        android:text="@string/back_activity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/next_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_green_border_bg"
        android:drawableEnd="@drawable/ic_arrow_right_white_24dp"
        android:drawableRight="@drawable/ic_arrow_right_white_24dp"
        android:padding="15dp"
        android:text="@string/next_activity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>