<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sl_background_border"
    tools:context=".SearchUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/step1"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/img_title_activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/step1"
            app:layout_constraintEnd_toEndOf="@id/step1"
            app:layout_constraintStart_toStartOf="@id/step1"
            app:layout_constraintTop_toTopOf="@id/step1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_logout_orange_24dp"
        android:drawableRight="@drawable/ic_logout_orange_24dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dati"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:background="@drawable/sl_green_border"
        android:layout_marginTop="65dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step1">

        <LinearLayout
            android:id="@+id/user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dati">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.polyak.iconswitch.IconSwitch
                    android:id="@+id/icon_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isw_background_color="@color/green"
                    app:isw_inactive_tint_icon_left="@color/orange"
                    app:isw_inactive_tint_icon_right="@color/orange"
                    app:isw_thumb_color_left="@color/orange"
                    app:isw_thumb_color_right="@color/orange"
                    app:isw_default_selection="right"
                    app:isw_icon_left="@drawable/ic_email"
                    app:isw_icon_right="@drawable/ic_phone"
                    app:isw_icon_size="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/phone"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/search_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/sl_green_border"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="Autofill,LabelFor" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sl_orange_bg"
                android:text="@string/search"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_gravity="center"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="12dp"
                app:spinning_bar_width="4dp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/foundUserLayout"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/sl_green_border_bg"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/dati"
        app:layout_constraintEnd_toEndOf="@+id/dati"
        app:layout_constraintStart_toStartOf="@+id/dati"
        app:layout_constraintTop_toTopOf="@+id/dati">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_found"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/book_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/user_search_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/user_data_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sl_blue_bg"
        android:text="@string/user_data_desc"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step1" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_red_border_bg"
        android:padding="15dp"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/next_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sl_green_border_bg"
        android:drawableEnd="@drawable/ic_arrow_right_white_24dp"
        android:drawableRight="@drawable/ic_arrow_right_white_24dp"
        android:padding="15dp"
        android:text="@string/next_activity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>